# MSC-Editor

./: AUTHORS  CMakeLists.txt  FindANTLR.cmake  INSTALL  README  README.md  TODO
doc/: CMakeLists.txt  doxyfile  doxyfile.in
lib/: CMakeLists.txt
lib/libantlr3c-3.1.3/: CMakeLists.txt  Makefile.in  aclocal.m4  configure
lib/libantlr3c-3.1.3/include/: antlr3lexer.h
lib/misc/: CMakeLists.txt  exception.cc  exception.hh  symbol.cc  symbol.hh  symbol.hxx  unique.hh  unique.hxx
src/: CMakeLists.txt  Makefile  msce.cc
src/binder/: CMakeLists.txt  binder.cc  binder.hh
src/gmsc/: graphical-extension.hh  readme_then_delete_me.cc  types.hh
src/gui/: CMakeLists.txt
src/gui/qt/: CMakeLists.txt  arrow.cc  arrow.hh  msc-editor.h  msc-editor.hh  msc-editor.ui  scene-moc.cc  scene.cc  scene.hh  window-moc.cc  window.cc  window.hh
src/msc/: CMakeLists.txt  Makefile  all.hh  ast.cc  ast.hh  basic-msc.cc  basic-msc.hh  basic-msc.hxx  comment.cc  comment.hxx  commentable.hh  commentable.hxx  complete-message.cc  connection-node.cc  connection-node.hh  coregion-event-relation.cc  coregion-event-relation.hxx  coregion-event.cc  default-visitor.cc  default-visitor.hh  document-head.cc  document-head.hh  document-head.hxx  document.cc  document.hh  document.hxx  end-node.hh  event-definition.hh  event.cc  event.hh  expression.hh  factory.cc  factory.hh  fwd.hh  gen-visitor.cc  gen-visitor.hh  gen-visitor.hxx  helper.hh  helper.hxx  high-msc-node.cc  (+42 more)
src/msc_save/: CMakeLists.txt  basic-msc.cc  basic-msc.hh  comment.hh  commentable.hh  complete-message.hh  coregion-area.cc  coregion-area.hh  coregion-event-relation.hh  coregion-event.hh  end-node.cc  event-area.cc  event-area.hh  event.cc  fwd.hh  gen-visitor.cc  high-msc-node.hh  high-msc.cc  incomplete-message.cc  incomplete-message.hh  instance.hh  msc-message.cc  msc-textual-file.cc  msc-textual-file.hh  node-relation.hh  node.hh  par-expression.cc  reference-node.hh  strict-order-area.cc  strict-order-area.hh  successor-node.hh  types.hh
src/nbproject/: configurations.xml  project.xml
src/nbproject/private/: configurations.xml
src/parse/: CMakeLists.txt  MSCLexer.g  MSCParser.g  MSCParser2000.g  MSCTreeWalkerSubset.g  Msc.g  Msc.tokens  MscLexer.c  MscLexer.h  MscParser.c  MscParser.h  Z120.g  exception.cc  exception.hh  parser.cc  parser.hh  parser.hxx
src/view/qt/: CMakeLists.txt  decorator.cc  decorator.hh  decorator.hxx  dtor.cc  dtor.hh  graph-view.cc  graph-view.hh
src/view/qt/gmsc/: CMakeLists.txt  all.hh  draw.cc  factory.cc  factory.hh  fwd.hh  graphical-extension.hh  graphical-extension.hxx  instance.cc  instance.hh  message.cc  message.hh  readme_then_delete_me.hh  types.hh
tests/: testsuite.sh
tests/parse/: 01_msc_connection.mpr  02_message_overtaking.mpr  03_basic_concepts_instance.mpr  05_connection_request.mpr  06_connection_confirm.mpr  07_con_setup.mpr  08_connection.mpr  11_process_creation.mpr  14_TSD.mpr  15_inline_alternative_expression.mpr  16_inline_exception_expression.mpr  18_inline_parallel_expression.mpr  19_msc_reference.mpr  20_msc_reference_with_gate.mpr  24_HMSC_with_parallel_expression.mpr  CMakeLists.txt  basic_concepts.mpr  main.cc  msc2000minimaldocumenthead.mpr  msc92.mpr  msc96documenthead.mpr  parse.cc  pretty-printer.cc  sharedexpr.mpr  testparse.sh  testpretty-printer.sh  time_constraint2_msc2000.mpr  time_constraint_alternatives2_msc2000.mpr  time_example.mpr  time_example_without_spaces.mpr  timer.mpr
tests/parse/files/: 02_message_overtaking.mpr  04_basic_concepts_event.mpr  09_failure.mpr  10_local_conditions.mpr  13_connectivity.mpr  17_inline_expression_with_gates.mpr  21_HMSC_setup_attach.mpr  26_Simple.mpr  hmsc2.mpr  msc92.mpr  msc_all_ttcn.mpr  time_constraint1_msc2000.mpr  time_example.mpr  timer.mpr
tests/parse/files/msc2000/: timer2000.mpr
tests/parse/files/msc96/: 00_msc_test.mpr  02_message_overtaking.mpr  03_basic_concepts_instance.mpr  12_coregion.mpr  17_inline_expression_with_gates.mpr  22_HMSC_setup_loop.mpr  23_HMSC_alternative.mpr  25_Simple1.mpr  msc96documenthead.mpr  timer.mpr
